# Tiler

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  setup_tiler_project.bat  setup_tiler_project.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: tiler-workflow.yml
Application/: CMakeLists.txt
Application/Source/: Launcher.cpp  Launcher.h  Main.cpp
Host/Source/: CMakeLists.txt  HostApplication.cpp
Scripts/: check_essential_tools.py  setup_tiler_project.py
Scripts/_scripts/: base_utils.py  preset_parser.py
Tiler/: CMakeLists.txt  tiler_pch.cpp
Tiler/Editor/: CMakeLists.txt
Tiler/Editor/Include/Tiler/: Editor.h
Tiler/Editor/Include/Tiler/Editor/: Base.h  EntryPoint.h
Tiler/Editor/Include/Tiler/Editor/Core/: Application.h  Layer.h
Tiler/Editor/Source/Core/: Application.cpp
Tiler/Editor/Source/Platform/: NativeWindow.cpp  NativeWindow.h
Tiler/EditorLauncher/: CMakeLists.txt
Tiler/EditorLauncher/Source/: Launcher.cpp
Tiler/Engine/: CMakeLists.txt
Tiler/Engine/Include/Tiler/: Engine.h
Tiler/Engine/Include/Tiler/Engine/: Base.h  EntryPoint.h  KeyCode.h  MouseButtonCode.h
Tiler/Engine/Include/Tiler/Engine/Core/: Application.h  ImGuiOverlay.h  Input.h  Layer.h  LayerStack.h  Log.h  Timestep.h  Window.h
Tiler/Engine/Include/Tiler/Engine/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Tiler/Engine/Include/Tiler/Engine/Core/FileManager/: FileLoader.h
Tiler/Engine/Include/Tiler/Engine/Core/ImGui/: ImGuiLayer.h
Tiler/Engine/Include/Tiler/Engine/Core/Renderer/: Buffer.h  CameraOrthographic.h  GraphicsAPI.h  RenderCommand.h  Renderer.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.h
Tiler/Engine/Include/Tiler/Engine/Core/Renderer/Buffer/: BufferLayout.h  IndexBuffer.h  VertexBuffer.h
Tiler/Engine/Include/Tiler/Engine/Platform/Independent/Glfw/: GlfwWindow.h
Tiler/Engine/Include/Tiler/Engine/Platform/Independent/OpenGL/: OpenGLBuffer.h  OpenGLRenderContext.h  OpenGLRendererAPI.h  OpenGLVertexArray.h
Tiler/Engine/Source/: Application.cpp  Layer.cpp  Log.cpp
Tiler/Engine/Source/Core/: Application.cpp  ImGuiOverlay.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
Tiler/Engine/Source/Core/Events/: ApplicationEvent.cpp  Event.cpp  KeyEvent.cpp  MouseEvent.cpp
Tiler/Engine/Source/Core/FileManager/: FileLoader.cpp
Tiler/Engine/Source/Core/ImGui/: ImGuiLayer.cpp
Tiler/Engine/Source/Core/Renderer/: CameraOrthographic.cpp  RenderCommand.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  VertexArray.cpp
Tiler/Engine/Source/Core/Renderer/Buffer/: BufferLayout.cpp  IndexBuffer.cpp  VertexBuffer.cpp
Tiler/Engine/Source/Events/: KeyEvent.cpp
Tiler/Engine/Source/Platform/: NativeGraphicsAPI.cpp  NativeGraphicsAPI.h  NativeWindow.cpp  NativeWindow.h
Tiler/Engine/Source/Platform/GLFW/: GLFWindow.cpp  GLFWindow.h  GlfwInput.cpp  GlfwInput.h  GlfwOpenGLGraphicsAPI.cpp  GlfwOpenGLGraphicsAPI.h  GlfwWindow.cpp  GlfwWindow.h  glfw_base.h
Tiler/Engine/Source/Platform/Independent/Glfw/: GlfwInput.cpp  GlfwWindow.cpp
Tiler/Engine/Source/Platform/Independent/OpenGL/: OpenGLBuffer.cpp  OpenGLRenderContext.cpp  OpenGLRendererAPI.cpp  OpenGLVertexArray.cpp
Tiler/Engine/Source/Platform/OpenGL/: OpenGLGraphicsAPI.cpp  OpenGLGraphicsAPI.h  OpenGLRenderContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  opengl_base.h  opengl_debugging.cpp  opengl_debugging.h
Tiler/Engine/Source/Platform/OpenGL/Buffer/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Tiler/Engine/Source/Platform/SDL/: SDLWindow.cpp  SDLWindow.h
Tiler/Engine/Source/Renderer/: Buffer.cpp  CameraOrthographic.cpp  RenderCommand.cpp  VertexArray.cpp
Tiler/EngineSandbox/: CMakeLists.txt
Tiler/EngineSandbox/Source/: Sandbox.cpp
Tiler/Include/Tiler/: Application.h  Core.h  EntryPoint.h  Input.h  KeyCode.h  Layer.h  LayerStack.h  Log.h  Tiler.h  Timestep.h  Window.h
Tiler/Include/Tiler/Events/: Event.h  KeyEvent.h  MouseEvent.h
Tiler/Include/Tiler/ImGui/: ImGuiLayer.h
Tiler/Include/Tiler/Platform/Independent/Glfw/: GlfwInput.h  GlfwWindow.h
Tiler/Include/Tiler/Platform/Independent/OpenGL/: OpenGLBuffer.h  OpenGLRenderContext.h  OpenGLRendererAPI.h  OpenGLVertexArray.h
Tiler/Include/Tiler/Renderer/: Buffer.h  CameraOrthographic.h  RenderCommand.h  RenderContext.h  Renderer.h  RendererAPI.h  Shader.h  VertexArray.h
Tiler/Sandbox/: CMakeLists.txt
Tiler/Sandbox/Source/: Sandbox.cpp
Tiler/Source/: Application.cpp  CMakeLists.txt  Core.h  Layer.cpp  LayerStack.cpp  Log.cpp  Log.h  Tiler.h
Tiler/Source/Events/: ApplicationEvent.cpp  ApplicationEvent.h  Event.cpp  Event.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp
Tiler/Source/ImGui/: ImGuiLayer.cpp
Tiler/Source/Platform/Independent/Glfw/: GlfwInput.cpp  GlfwWindow.cpp  GlfwWindow.h  imgui_impl_glfw.cpp
Tiler/Source/Platform/Independent/OpenGL/: OpenGLBuffer.cpp  OpenGLRenderContext.cpp  OpenGLRendererAPI.cpp  OpenGLVertexArray.cpp  imgui_impl_opengl3.cpp
Tiler/Source/Renderer/: Buffer.cpp  CameraOrthographic.cpp  RenderCommand.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  VertexArray.cpp
Tiler/Source/Tiler/: Application.cpp  Application.h  EntryPoint.h
